--- a/index.html
+++ b/index.html
@@ -1,126 +1,164 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Platformer Game</title>
-<style>
-    body, html {
-        margin: 0;
-        padding: 0;
-        overflow: hidden;
-        height: 100%;
-    }
-    canvas {
-        display: block;
-        margin: auto;
-        background-color: #fff;
-        border: 1px solid #000;
-    }
-</style>
+    <style>
+        body {
+            margin: 0;
+            padding: 0;
+            overflow: hidden;
+            background-color: #f0f8ff;
+        }
+        canvas {
+            display: block;
+            margin: auto;
+            background-color: #f0f8ff;
+        }
+    </style>
 </head>
 <body>
-<canvas id="gameCanvas"></canvas>
-<script>
-    // Get the canvas element
-    const canvas = document.getElementById('gameCanvas');
-    const ctx = canvas.getContext('2d');
+    <canvas id="canvas"></canvas>
+    <script>
+        var player = {
+            x: 0,
+            y: 0,
+            x_v: 0,
+            y_v: 0,
+            jump: false,
+            height: 20,
+            width: 20
+        };
 
-    // Set canvas size to match screen size
-    canvas.width = window.innerWidth;
-    canvas.height = window.innerHeight;
+        var keys = {
+            right: false,
+            left: false,
+            up: false,
+        };
 
-    // Player properties
-    const playerWidth = 50;
-    const playerHeight = 50;
-    let playerX = canvas.width / 2 - playerWidth / 2;
-    let playerY = canvas.height - playerHeight;
-    let playerSpeed = 5;
-    let gravity = 0.5; // Lower gravity for smoother jumping
-    let jumpStrength = 10; // Lower jump strength for smoother jumping
-    let jumpVelocity = 0;
-    let isJumping = false;
+        var gravity = 0.6;
+        var friction = 0.7;
 
-    // Platform properties
-    const platformWidth = 100;
-    const platformHeight = 20;
-    const platforms = [
-        { x: 100, y: canvas.height - 100 },
-        { x: 300, y: canvas.height - 200 },
-        { x: 500, y: canvas.height - 150 },
-        { x: 700, y: canvas.height - 250 },
-    ];
+        var platforms = [];
+        var numPlatforms = 5; // Number of platforms
+        var platformHeight = 15;
 
-    // Handle keyboard input
-    const keys = [];
-    window.addEventListener('keydown', (e) => {
-        keys[e.keyCode] = true;
-    });
-    window.addEventListener('keyup', (e) => {
-        keys[e.keyCode] = false;
-    });
-
-    // Update player position
-    function updatePlayer() {
-        // Move left
-        if ((keys[37] || keys[65]) && playerX > 0) { // Left arrow or A key
-            playerX -= playerSpeed;
-        }
-        // Move right
-        if ((keys[39] || keys[68]) && playerX < canvas.width - playerWidth) { // Right arrow or D key
-            playerX += playerSpeed;
-        }
-        // Jump
-        if ((keys[32] || keys[38]) && !isJumping) { // Spacebar or Up arrow
-            isJumping = true;
-            jumpVelocity = -jumpStrength; // Start with negative velocity for upward movement
+        function renderCanvas() {
+            ctx.fillStyle = "#F0F8FF";
+            ctx.fillRect(0, 0, canvas.width, canvas.height);
         }
 
-        // Update jump velocity
-        if (isJumping) {
-            playerY += jumpVelocity;
-            jumpVelocity += gravity; // Apply gravity to reduce jump velocity
-        }
-        
-        // Collision with ground
-        if (playerY + playerHeight > canvas.height) {
-            playerY = canvas.height - playerHeight;
-            isJumping = false;
-            jumpVelocity = 0;
+        function renderPlayer() {
+            ctx.fillStyle = "#F08080";
+            ctx.fillRect(player.x, player.y, player.width, player.height);
         }
 
-        // Collision with platforms
-        platforms.forEach(platform => {
-            if (
-                playerX < platform.x + platformWidth &&
-                playerX + playerWidth > platform.x &&
-                playerY + playerHeight > platform.y &&
-                playerY < platform.y + platformHeight
-            ) {
-                // If player collides with a platform, stop jumping and reset Y position
-                playerY = platform.y - playerHeight;
-                isJumping = false;
-                jumpVelocity = 0;
+        function createPlatforms() {
+            // Create platforms with random positions
+            for (var i = 0; i < numPlatforms; i++) {
+                var platform = {
+                    x: Math.random() * (canvas.width - 110),
+                    y: Math.random() * (canvas.height - platformHeight),
+                    width: 110,
+                    height: platformHeight
+                };
+                platforms.push(platform);
             }
-        });
 
-        // Draw player
-        ctx.clearRect(0, 0, canvas.width, canvas.height);
-        ctx.fillStyle = '#f00';
-        ctx.fillRect(playerX, playerY, playerWidth, playerHeight);
+            // Sort platforms by y position
+            platforms.sort(function(a, b) {
+                return a.y - b.y;
+            });
 
-        // Draw platforms
-        ctx.fillStyle = '#00f';
-        platforms.forEach(platform => {
-            ctx.fillRect(platform.x, platform.y, platformWidth, platformHeight);
-        });
+            // Find the platform closest to the bottom
+            var bottomPlatform = platforms[numPlatforms - 1];
 
-        // Request animation frame
-        requestAnimationFrame(updatePlayer);
-    }
+            // Set player spawn position to the center of the bottom platform
+            player.x = bottomPlatform.x + (bottomPlatform.width - player.width) / 2;
+            player.y = bottomPlatform.y - player.height;
 
-    // Start the game loop
-    updatePlayer();
-</script>
+            // Ensure all platforms are accessible to the player
+            for (var i = numPlatforms - 2; i >= 0; i--) {
+                var platform = platforms[i];
+                if (platform.y + platform.height >= player.y + player.height) {
+                    var offsetY = (platform.y + platform.height) - (player.y + player.height);
+                    platform.y -= offsetY + 1;
+                }
+            }
+        }
+
+        function renderPlatforms() {
+            ctx.fillStyle = "#45597E";
+            platforms.forEach(function (platform) {
+                ctx.fillRect(platform.x, platform.y, platform.width, platform.height);
+            });
+        }
+
+        function keyDownHandler(e) {
+            if (e.keyCode == 37) {
+                keys.left = true;
+            }
+            if (e.keyCode == 38) {
+                if (!player.jump) {
+                    player.y_v = -10;
+                    player.jump = true;
+                }
+            }
+            if (e.keyCode == 39) {
+                keys.right = true;
+            }
+        }
+
+        function keyUpHandler(e) {
+            if (e.keyCode == 37) {
+                keys.left = false;
+            }
+            if (e.keyCode == 39) {
+                keys.right = false;
+            }
+        }
+
+        function gameLoop() {
+            if (player.jump) {
+                player.y_v += gravity;
+            }
+
+            if (keys.left) {
+                player.x_v = -2.5;
+            }
+            if (keys.right) {
+                player.x_v = 2.5;
+            }
+
+            player.y += player.y_v;
+            player.x += player.x_v;
+
+            // Check collision with platforms
+            platforms.forEach(function (platform) {
+                if (player.x < platform.x + platform.width &&
+                    player.x + player.width > platform.x &&
+                    player.y + player.height > platform.y &&
+                    player.y + player.height < platform.y + platform.height) {
+                    player.jump = false;
+                    player.y = platform.y - player.height;
+                    player.y_v = 0;
+                }
+            });
+
+            // Apply friction
+            player.x_v *= friction;
+
+            renderCanvas();
+            renderPlayer();
+            renderPlatforms();
+        }
+
+        var canvas = document.getElementById("canvas");
+        var ctx = canvas.getContext("2d");
+        canvas.width = 800;
+        canvas.height = 400;
+        createPlatforms();
+        document.addEventListener("keydown", keyDownHandler, false);
+        document.addEventListener("keyup", keyUpHandler, false);
+        setInterval(gameLoop, 22);
+    </script>
 </body>
 </html>
