--- a/index.html
+++ b/index.html
@@ -1,164 +1,91 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Full Screen Canvas with Plants</title>
     <style>
-        body {
+        /* Make the canvas fill the entire screen */
+        body, html {
             margin: 0;
             padding: 0;
-            overflow: hidden;
-            background-color: #f0f8ff;
+            overflow: hidden; /* Hide scrollbars */
+            width: 100%;
+            height: 100%;
         }
         canvas {
             display: block;
-            margin: auto;
-            background-color: #f0f8ff;
+            width: 100%;
+            height: 100%;
         }
     </style>
 </head>
 <body>
-    <canvas id="canvas"></canvas>
+    <!-- Canvas element -->
+    <canvas id="fullscreenCanvas"></canvas>
+
     <script>
-        var player = {
-            x: 0,
-            y: 0,
-            x_v: 0,
-            y_v: 0,
-            jump: false,
-            height: 20,
-            width: 20
+        // JavaScript code for drawing on the canvas
+        window.onload = function() {
+            // Get the canvas element
+            var canvas = document.getElementById('fullscreenCanvas');
+            var context = canvas.getContext('2d');
+
+            // Array to store plant positions
+            var plants = [];
+
+            // Function to draw a circle
+            function drawCircle(ctx, x, y, radius, color) {
+                ctx.beginPath();
+                ctx.arc(x, y, radius, 0, 2 * Math.PI);
+                ctx.fillStyle = color;
+                ctx.fill();
+                ctx.closePath();
+            }
+
+            // Function to check if two plants are within 50px of each other
+            function checkPlantProximity() {
+                for (var i = 0; i < plants.length; i++) {
+                    for (var j = i + 1; j < plants.length; j++) {
+                        var dx = plants[i].x - plants[j].x;
+                        var dy = plants[i].y - plants[j].y;
+                        var distance = Math.sqrt(dx * dx + dy * dy);
+                        if (distance < 50) {
+                            spawnNewPlant();
+                            return;
+                        }
+                    }
+                }
+            }
+
+            // Function to spawn a new plant
+            function spawnNewPlant() {
+                // Randomly select one of the existing plants
+                var existingPlant = plants[Math.floor(Math.random() * plants.length)];
+
+                // Generate random coordinates within 50px in any direction from the selected plant
+                var newX = existingPlant.x + Math.random() * 100 - 50;
+                var newY = existingPlant.y + Math.random() * 100 - 50;
+
+                // Ensure the new coordinates are within the canvas bounds
+                newX = Math.max(5, Math.min(canvas.width - 5, newX));
+                newY = Math.max(5, Math.min(canvas.height - 5, newY));
+
+                // Add the new plant to the plants array
+                plants.push({ x: newX, y: newY });
+
+                // Draw the new plant
+                drawCircle(context, newX, newY, 5, 'green');
+            }
+
+            // Initial plants
+            drawCircle(context, 50, 50, 5, 'green');   // Plant 1
+            drawCircle(context, 150, 150, 5, 'green'); // Plant 2
+            plants.push({ x: 50, y: 50 }, { x: 150, y: 150 });
+
+            // Check plant proximity every 2.5 seconds
+            setInterval(checkPlantProximity, 2500);
         };
-
-        var keys = {
-            right: false,
-            left: false,
-            up: false,
-        };
-
-        var gravity = 0.6;
-        var friction = 0.7;
-
-        var platforms = [];
-        var numPlatforms = 5; // Number of platforms
-        var platformHeight = 15;
-
-        function renderCanvas() {
-            ctx.fillStyle = "#F0F8FF";
-            ctx.fillRect(0, 0, canvas.width, canvas.height);
-        }
-
-        function renderPlayer() {
-            ctx.fillStyle = "#F08080";
-            ctx.fillRect(player.x, player.y, player.width, player.height);
-        }
-
-        function createPlatforms() {
-            // Create platforms with random positions
-            for (var i = 0; i < numPlatforms; i++) {
-                var platform = {
-                    x: Math.random() * (canvas.width - 110),
-                    y: Math.random() * (canvas.height - platformHeight),
-                    width: 110,
-                    height: platformHeight
-                };
-                platforms.push(platform);
-            }
-
-            // Sort platforms by y position
-            platforms.sort(function(a, b) {
-                return a.y - b.y;
-            });
-
-            // Find the platform closest to the bottom
-            var bottomPlatform = platforms[numPlatforms - 1];
-
-            // Set player spawn position to the center of the bottom platform
-            player.x = bottomPlatform.x + (bottomPlatform.width - player.width) / 2;
-            player.y = bottomPlatform.y - player.height;
-
-            // Ensure all platforms are accessible to the player
-            for (var i = numPlatforms - 2; i >= 0; i--) {
-                var platform = platforms[i];
-                if (platform.y + platform.height >= player.y + player.height) {
-                    var offsetY = (platform.y + platform.height) - (player.y + player.height);
-                    platform.y -= offsetY + 1;
-                }
-            }
-        }
-
-        function renderPlatforms() {
-            ctx.fillStyle = "#45597E";
-            platforms.forEach(function (platform) {
-                ctx.fillRect(platform.x, platform.y, platform.width, platform.height);
-            });
-        }
-
-        function keyDownHandler(e) {
-            if (e.keyCode == 37) {
-                keys.left = true;
-            }
-            if (e.keyCode == 38) {
-                if (!player.jump) {
-                    player.y_v = -10;
-                    player.jump = true;
-                }
-            }
-            if (e.keyCode == 39) {
-                keys.right = true;
-            }
-        }
-
-        function keyUpHandler(e) {
-            if (e.keyCode == 37) {
-                keys.left = false;
-            }
-            if (e.keyCode == 39) {
-                keys.right = false;
-            }
-        }
-
-        function gameLoop() {
-            if (player.jump) {
-                player.y_v += gravity;
-            }
-
-            if (keys.left) {
-                player.x_v = -2.5;
-            }
-            if (keys.right) {
-                player.x_v = 2.5;
-            }
-
-            player.y += player.y_v;
-            player.x += player.x_v;
-
-            // Check collision with platforms
-            platforms.forEach(function (platform) {
-                if (player.x < platform.x + platform.width &&
-                    player.x + player.width > platform.x &&
-                    player.y + player.height > platform.y &&
-                    player.y + player.height < platform.y + platform.height) {
-                    player.jump = false;
-                    player.y = platform.y - player.height;
-                    player.y_v = 0;
-                }
-            });
-
-            // Apply friction
-            player.x_v *= friction;
-
-            renderCanvas();
-            renderPlayer();
-            renderPlatforms();
-        }
-
-        var canvas = document.getElementById("canvas");
-        var ctx = canvas.getContext("2d");
-        canvas.width = 800;
-        canvas.height = 400;
-        createPlatforms();
-        document.addEventListener("keydown", keyDownHandler, false);
-        document.addEventListener("keyup", keyUpHandler, false);
-        setInterval(gameLoop, 22);
     </script>
 </body>
 </html>
